--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,9 +13,9 @@
     />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./favicon.png" />
-    <title>electron-start-app</title>
+    <title>Electron 快速上手</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <h1>你好 Electron</h1>
   </body>
 </html>
