--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <title>Electron 快速上手</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./favicon.png" />
+    <link rel="stylesheet" href="./css/base.css" />
   </head>
   <body>
-    <h1>你好 Electron</h1>
+    <p align="center">
+      <img src="./img/logo.png" alt="Guany Logo" />
+    </p>
+    <h1>Electron 快速上手</h1>
   </body>
 </html>
