--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       content="script-src 'self' 'unsafe-inline';"
     />
     <title>Electron 快速上手</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="favicon.png" />
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./favicon.png" />
+    <link rel="stylesheet" href="./styles/base.css" />
   </head>
   <body>
     <p align="center">
-      <img src="images/logo.png" alt="Guany Logo" />
+      <img src="./images/logo.png" alt="Guany Logo" />
     </p>
     <h1>Electron 快速上手</h1>
   </body>
