--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <p align="center">
       <img src="./images/logo.png" alt="Guany Logo" />
     </p>
-    <h1>Electron 快速上手</h1>
+    <h1><code>Electron</code> 快速上手</h1>
   </body>
 </html>
