--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <title>Electron 快速上手</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="./favicon.png" />
-    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./css/base.css" />
   </head>
   <body>
     <p align="center">
-      <img src="./images/logo.png" alt="Guany Logo" />
+      <img src="./img/logo.png" alt="Guany Logo" />
     </p>
     <h1><code>Electron</code> 快速上手</h1>
   </body>
